[gd_scene load_steps=3 format=2]

[ext_resource path="res://Behaviours/DiggingBehaviour.gd" type="Script" id=1]
[ext_resource path="res://Fonts/pixel.tres" type="DynamicFont" id=2]

[node name="DiggingBehaviour" type="Node2D"]
z_index = 6
script = ExtResource( 1 )

[node name="MineAmountLabel" type="Label" parent="."]
margin_left = -3.71627
margin_top = -17.9124
margin_right = 4.28373
margin_bottom = -7.91243
custom_fonts/font = ExtResource( 2 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DigTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="timeout" from="DigTimer" to="." method="_on_DigTimer_timeout"]
